--- a/src/CipherPage/TextField.css
+++ b/src/CipherPage/TextField.css
@@ -1,6 +1,5 @@
 .text-field {
   margin: 1em;
-  text-align: left;
 }
 
 .text-field-label {
